# SukiSU-Ultra

./: .gitignore  android12-5.10_kernelsu.ko  android13-5.10_kernelsu.ko  android13-5.15_kernelsu.ko  android14-5.15_kernelsu.ko  android14-6.1_kernelsu.ko  android15-6.6_kernelsu.ko
.github/workflows/: build-kernel-a12.yml  build-kernel-a13.yml  build-kernel-a14.yml  build-kernel-a15.yml  build-kernel-a16.yml  build-lkm.yml  build-manager.yml  ddk-lkm.yml  gki-kernel.yml  ksud.yml  meta-overlay.yml  notify.yml
Website/docs/zh/guide/: how-to-integrate.md
docs/: README.md
docs/guide/: how-to-integrate.md  tracepoint-hook.md
docs/ja/: README.md
docs/ru/: README.md
docs/ru/guide/: how-to-integrate.md  installation.md  tracepoint-hook.md
docs/tr/: README.md
docs/zh/: README.md
docs/zh/guide/: how-to-integrate.md  tracepoint-hook.md
kernel/: Kbuild  Kconfig  Makefile  allowlist.c  allowlist.h  apk_sign.c  app_profile.c  app_profile.h  arch.h  core_hook.c  core_hook.h  dynamic_manager.c  dynamic_manager.h  feature.h  file_wrapper.c  file_wrapper.h  kernel_compat.c  kernel_compat.h  kernel_umount.c  kernel_umount.h  kprobe_hook_manager.c  kprobe_hook_manager.h  ksu.c  ksu.h  ksu_netlink.c  ksu_netlink.h  ksu_trace.c  ksu_trace.h  ksud.c  ksud.h  manager.h  manager_sign.h  manual_su.c  manual_su.h  pkg_observer.c  seccomp_cache.c  seccomp_cache.h  setuid_hook.c  setuid_hook.h  sucompat.c  (+11 more)
kernel/kpm/: compact.c  kpm.c  kpm.h  super_access.c  super_access.h
kernel/selinux/: rules.c  selinux.c  sepolicy.c
manager/: build.gradle.kts  gradlew  randomizer
manager/app/: build.gradle.kts  proguard-rules.pro
manager/app/src/main/: AndroidManifest.xml
manager/app/src/main/assets/: kpimg  kptools  (+2 more)
manager/gradle/: libs.versions.toml
scripts/: ksubot.py
ts/: README.md  package.json  send.ts
userspace/ksud/: Cargo.toml  build.rs
userspace/ksud/src/: assets.rs  boot_patch.rs  cli.rs  defs.rs  feature.rs  init_event.rs  installer.sh  kpm.rs  ksucalls.rs  magic_mount.rs  main.rs  module.rs  profile.rs  restorecon.rs  sepolicy.rs  su.rs  susfs.rs  uid_scanner.rs  uid_scanner.sh  umount.rs  umount_manager.rs  utils.rs
userspace/ksuinit/src/: init.rs  loader.rs
(+107 files in other folders)
